# svg-viewer

./: .gitignore  BuildInstaller.bat  CMakeLists.txt  README.md  run.bat
forms/: mainwindow.ui
include/: Common.h  Extra.h  Logger.h  ThumbnailProvider.h
installer/: InstallerSetup.iss
src/: ClassFactory.cpp  ExplorerSvgSupport.def  Extra.cpp  Logger.cpp  Main.cpp  Registry.cpp  ThumbnailProvider.cpp
